# app/controllers.go
@@ -60,7 +60,7 @@ func MountAccountController(service *goa.Service, ctrl AccountController) {
 		}
 		// Build the payload
 		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
-			rctx.Payload = rawPayload.(*CreateAccountPayload)
+			rctx.Payload = rawPayload.(*AccountPayload)
 		} else {
 			return goa.MissingPayloadError()
 		}
@@ -138,7 +138,7 @@ func MountAccountController(service *goa.Service, ctrl AccountController) {
 
 // unmarshalCreateAccountPayload unmarshals the request body into the context request data Payload field.
 func unmarshalCreateAccountPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
-	payload := &createAccountPayload{}
+	payload := &accountPayload{}
 	if err := service.DecodeRequest(req, payload); err != nil {
 		return err
 	}
